--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Header and Footer Example</title>
+    <title>Air BnB Clone Web static</title>
 </head>
 <body style="margin: 0; padding: 0;">
 
@@ -9,18 +8,10 @@
 
     <!-- Page content goes here -->
 
-    <footer style="background-color: #00FF00;
-height: 60px;
-width: 100%;
-position: fixed;
-bottom: 0;
-text-align:center;
-display: flex;
-align-items: center;
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0; text-align:center; display: flex; align-items: center;
 justify-content: center;">
-        <span style="color:#000000; font-weight: bold;">Best School</span>
+        <p>Best School</p>
     </footer>
 
 </body>
 </html>
-
