--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,16 +2,34 @@
 <html lang="en">
   <head>
     <style>
-      header {background-color:#FF0000;height:70px;width:100%;}
-      footer {background-color:#00FF00;height:60px;width:100%;}
-      p {text-align:center;line-height:60px}
+      header{
+        background-color: #ff0000;
+        height: 70px;
+        width: 100%;
+        position: fixed;
+        text-align: center;
+        top: 0;
+      }
+      footer{
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: fixed;
+        align-items: center;
+        text-align: center;
+        bottom: 0;
+      }
+      
     </style>
+    <title>Air BnB Clone Web static</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <header>
+     
     </header>
-    <footer>
-	<p> Holberton School </p>
+    <footer> 
+      <p>Best School</p>
+
     </footer>
   </body>
 </html>
