--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,14 +4,15 @@
     <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="icon" href="images/icons.png">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>Air BnB Clone Web static</title>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="AiBnBlogo"></div>
     </header>
     <footer>
-        <p> Holberton School </p>
+        <p> Best School </p>
     </footer>
   </body>
 </html>
