--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -5,19 +5,20 @@
     <link rel="stylesheet" href="styles/4-header.css">
     <link rel="stylesheet" href="styles/4-footer.css">
     <link rel="stylesheet" href="styles/4-filters.css">
-    <link rel="icon" href="images/icons.png">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>Air BnB Clone Web static</title>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
-    </header>
+      <div class="AiBnBlogo"></div>
+    </header>   
     <div class="container">
       <section class="filters">
-	<button>search</button>
+	      <button>search</button>
       </section>
     </div>
     <footer>
-        <p> Holberton School </p>
+        <p> Best School </p>
     </footer>
   </body>
 </html>
