--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Air BnB Clone Web static</title>
     <link rel="stylesheet" href="styles/2-common.css">
     <link rel="stylesheet" href="styles/2-header.css">
     <link rel="stylesheet" href="styles/2-footer.css">
@@ -9,7 +10,24 @@
     <header>
     </header>
     <footer>
-	<p> Holberton School </p>
+      <p>Best School</p>
+
+    </footer>
+  </body>
+</html><!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Air BnB Clone Web static</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
+  </head>
+  <body>
+    <header>
+    </header>
+    <footer>
+      <p>Best School</p>
+
     </footer>
   </body>
 </html>
