--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles/5-common.css">
-    <link rel="stylesheet" href="styles/5-header.css">
-    <link rel="stylesheet" href="styles/5-footer.css">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/5-filters.css">
     <link rel="icon" href="images/icon.png" type="images/png"/>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="AiBnBlogo"></div>
     </header>
     <div class="container">
       <section class="filters">
@@ -20,7 +20,7 @@
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
-                <h4>Air Conditioning, Kitchen...</h4>
+          <h4>Air Conditioning, Kitchen...</h4>
         </div>
       </section>
     </div>
