--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -13,35 +13,34 @@
     </header>
     <div class="container">
       <section class="filters">
-	<button>search</button>
+        <button>search</button>
+        <div class="locations">
+          <h3>States</h3>
+          <h4>New York, Colorado...</h4>
 
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>New York, Colorado...</h4>
+          <ul class="popover">
+            <li><h2>California</h2></li>
+            <li>San Francisco</li>
+            <li><h2>New York<h2></li>
+            <li>Buffalo</li>
+          </ul>
+        </div>
 
-	  <ul class="popover">
-	    <li><h2>California</h2></li>
-	    <li>San Francisco</li>
-	    <li><h2>New York<h2></li>
-	    <li>Buffalo</li>
-	  </ul>
-	</div>
-
-	<div class="amenities">
-	  <h3>Amenities</h3>
-          <h4>Air Conditioning, Kitchen...</h4>
-	  <ul class="popover">
-	    <li>Internet</li>
-	    <li>TV</li>
-	    <li>Kitchen</li>
-	    <li>Iron</li>
-	   </ul>
-	</div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+                <h4>Air Conditioning, Kitchen...</h4>
+          <ul class="popover">
+            <li>Internet</li>
+            <li>TV</li>
+            <li>Kitchen</li>
+            <li>Iron</li>
+          </ul>
+        </div>
 
       </section>
     </div>
     <footer>
-        <p> Holberton School </p>
+        <p>Best School </p>
     </footer>
   </body>
 </html>
