--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="AiBnBlogo"></div>
     </header>
     <div class="container">
       <section class="filters">
