--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="AiBnBlogo"></div>
     </header>
     <div class="container">
       <section class="filters">
